results/SpecGenBench/conversational/log-NegAbs-2023_11_28_22_30_15.txt
public class NegAbs {
	
	//@ ensures \result < 0 ==> \result == num;
	//@ ensures \result >= 0 ==> \result == -num;
	public int negAbs(int num) {
		if (num < 0)
			return num;
		else
			return -num;
	}

}
/home/max/Documents/JMLGPT/tmp/NegAbs.java:9: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/NegAbs.java:3:) in method negAbs
			return -num;
			^
/home/max/Documents/JMLGPT/tmp/NegAbs.java:3: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/NegAbs.java:9:
	//@ ensures \result < 0 ==> \result == num;
	    ^
2 verification failures

public class NegAbs {
	
	//@ ensures \result < 0 ==> \result == num;
	//@ ensures \result >= 0 ==> \result == -num;
	public int negAbs(int num) {
		if (num < 0)
			return num;
		else
			return -num;
	}

	//@ ensures \result < 0 ==> \result == num;
	//@ ensures \result >= 0 ==> \result == -num;
	public /*@ pure @*/ int negAbs(int num) {
		if (num < 0)
			return num;
		else
			return -num;
	}

}
/home/max/Documents/JMLGPT/tmp/NegAbs.java:14: error: method negAbs(int) is already defined in class NegAbs
	public /*@ pure @*/ int negAbs(int num) {
	                        ^
1 error

public class NegAbs {
	
	//@ ensures \result < 0 ==> \result == num;
	//@ ensures \result >= 0 ==> \result == -num;
	public int negAbs(int num) {
		if (num < 0)
			return num;
		else
			return -num;
	}

	//@ ensures \result < 0 ==> \result == num;
	//@ ensures \result >= 0 ==> \result == -num;
	public /*@ pure @*/ int negAbsPure(int num) {
		if (num < 0)
			return num;
		else
			return -num;
	}

}
/home/max/Documents/JMLGPT/tmp/NegAbs.java:9: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/NegAbs.java:3:) in method negAbs
			return -num;
			^
/home/max/Documents/JMLGPT/tmp/NegAbs.java:3: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/NegAbs.java:9:
	//@ ensures \result < 0 ==> \result == num;
	    ^
/home/max/Documents/JMLGPT/tmp/NegAbs.java:18: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/NegAbs.java:12:) in method negAbsPure
			return -num;
			^
/home/max/Documents/JMLGPT/tmp/NegAbs.java:12: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/NegAbs.java:18:
	//@ ensures \result < 0 ==> \result == num;
	    ^
4 verification failures

public class NegAbs {
	
	//@ requires num < 0;
	//@ ensures \result == num;
	//@ also
	//@ requires num >= 0;
	//@ ensures \result == -num;
	public int negAbs(int num) {
		if (num < 0)
			return num;
		else
			return -num;
	}

	//@ requires num < 0;
	//@ ensures \result == num;
	//@ also
	//@ requires num >= 0;
	//@ ensures \result == -num;
	public /*@ pure @*/ int negAbsPure(int num) {
		if (num < 0)
			return num;
		else
			return -num;
	}

}

